# insighta-cli

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
insighta/: auth.py  config.py  display.py  http.py  main.py  profiles.py
tests/: test_auth.py  test_http.py  test_profiles.py
